force-app/main/default/objects/Opportunity/fields/Exchange_From__c.field-meta.xml
<CustomField>
    <fullName>Exchange_From__c</fullName>
    <label>Exchange From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afghanistan (AFN)</fullName>
            </value>
            <value>
                <fullName>Albania (ALL)</fullName>
            </value>
            <value>
                <fullName>Algeria (DZD)</fullName>
            </value>
            <value>
                <fullName>Andorra (EUR)</fullName>
            </value>
            <value>
                <fullName>Angola (AOA)</fullName>
            </value>
            <value>
                <fullName>Antigua and Barbuda (XCD)</fullName>
            </value>
            <value>
                <fullName>Argentina (ARS)</fullName>
            </value>
            <value>
                <fullName>Armenia (AMD)</fullName>
            </value>
            <value>
                <fullName>Australia (AUD)</fullName>
            </value>
            <value>
                <fullName>Austria (EUR)</fullName>
            </value>
            <value>
                <fullName>Azerbaijan (AZN)</fullName>
            </value>
            <value>
                <fullName>Bahamas (BSD)</fullName>
            </value>
            <value>
                <fullName>Bahrain (BHD)</fullName>
            </value>
            <value>
                <fullName>Bangladesh (BDT)</fullName>
            </value>
            <value>
                <fullName>Barbados (BBD)</fullName>
            </value>
            <value>
                <fullName>Belarus (BYN)</fullName>
            </value>
            <value>
                <fullName>Belgium (EUR)</fullName>
            </value>
            <value>
                <fullName>Belize (BZD)</fullName>
            </value>
            <value>
                <fullName>Benin (XOF)</fullName>
            </value>
            <value>
                <fullName>Bhutan (BTN)</fullName>
            </value>
            <value>
                <fullName>Bolivia (BOB)</fullName>
            </value>
            <value>
                <fullName>Bosnia and Herzegovina (BAM)</fullName>
            </value>
            <value>
                <fullName>Botswana (BWP)</fullName>
            </value>
            <value>
                <fullName>Brazil (BRL)</fullName>
            </value>
            <value>
                <fullName>Brunei (BND)</fullName>
            </value>
            <value>
                <fullName>Bulgaria (BGN)</fullName>
            </value>
            <value>
                <fullName>Burkina Faso (XOF)</fullName>
            </value>
            <value>
                <fullName>Burundi (BIF)</fullName>
            </value>
            <value>
                <fullName>Cambodia (KHR)</fullName>
            </value>
            <value>
                <fullName>Cameroon (XAF)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>