force-app/main/default/objects/Opportunity/fields/Exchange_Rate_1_Foreign_Currency_to_SGD__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate_1_Foreign_Currency_to_SGD__c</fullName>
    <label>Exchange Rate(1 Foreign Currency to USD)</label>
    <precision>12</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>