force-app/main/default/objects/Opportunity/fields/Transaction_Price__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Price__c</fullName>
    <label>Transaction Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>