force-app/main/default/objects/Opportunity/fields/Transaction_Price_in_SGD__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Price_in_SGD__c</fullName>
    <formula>Transaction_Price__c * Exchange_Rate_1_Foreign_Currency_to_SGD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Price in USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>